--- a/web/css/CustomerRegistration.css
+++ b/web/css/CustomerRegistration.css
@@ -1,78 +1,54 @@
-body{
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    
-}
-
-.box{
-    width: 300px;
-    padding: 40px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.2);
-}
-
-.box2{
-    position: relative;
-    width: 100%;
-    height: 100vh;
+body {
+    background: #222;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+/*    , url('https://unsplash.it/1200/800/?random');*/
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-fill-mode: rgba(0,0,0,0.5);
     display: flex;
-    align-items: center;
     justify-content: center;
-    overflow: hidden;
-    text-align: center;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.2);
-    filter: blur(2px);
-    -webkit-filter: blur(2px);
+    align-items: center;
+    height: 100vh;
+}
+.container {
+    background: transparent;
+    padding: 20px 25px;
+    border: 1px solid #EEE;
+    width: 550px;
+    height: auto;
+    box-sizing: border-box;
+    position: relative;
+}
+.col.s6 > .btn {
+    width: 100%;
+}
+/*.gender-male,.gender-female {
+    display: inline-block;
+}
+.gender-female {
+    margin-left: 35px;
+}
+radio:required {
+    border-color: red;
+}*/
+.container {
+    animation: showUp 0.5s cubic-bezier(0.18, 1.3, 1, 1) forwards;
 }
 
-.box h1{
-    color: red;
-    text-transform: uppercase;
-    font-weight: 500;
+@keyframes showUp {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transoform: scale(1);
+    }
+}
+.row {margin-bottom: 10px;}
+
+.ngl {
+    position: absolute;
+    top: -20px;
+    right: -20px;
 }
 
-.box input[type = "text"], .box input[type = "password"], .box input[type = "email"]{
-    border: 0;
-    background: none;
-    display: bloack;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid #3498db;
-    padding: 14px 10px;
-    width: 200px;
-    outline: none;
-    color: white;
-    border-radius: 25px;
-    transition: 0.25s;
-}
-
-.box input[type = "text"]:focus, .box input[type = "password"]:focus, .box input[type = "email"]:focus{
-    width: 280px;
-    border-color: #2ecc71;
-}
-
-.box input[type = "submit"]{
-    border: 0;
-    background: none;
-    display: bloack;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid #2ecc71;
-    padding: 14px 40px;
-    outline: none;
-    color: white;
-    border-radius: 25px;
-    transition: 0.25s;
-    cursor: pointer;
-}
-
-.box input[type = "submit"]:hover{
-    background: #2ecc71;
-}
