--- a/web/css/DriverLogin.css
+++ b/web/css/DriverLogin.css
@@ -1,79 +1,48 @@
-body{
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    
-}
-
-.box{
-    width: 300px;
-    padding: 40px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.2);
-}
-
-.box2{
-    position: relative;
-    width: 100%;
-    height: 100vh;
+body {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    text-align: center;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.2);
-    filter: blur(2px);
-    -webkit-filter: blur(2px);
+    min-height: 100vh;
+    flex-direction: column;
 }
 
-.box h1{
-    color: red;
-    text-transform: uppercase;
-    font-weight: 500;
+main {
+    flex: 1 0 auto;
 }
 
-.box input[type = "text"], .box input[type = "password"], .box input[type = "email"]{
-    border: 0;
-    background: none;
-    display: bloack;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid #3498db;
-    padding: 14px 10px;
-    width: 200px;
-    outline: none;
-    color: white;
-    border-radius: 25px;
-    transition: 0.25s;
+body {
+    background: #fff;
 }
 
-.box input[type = "text"]:focus, .box input[type = "password"]:focus, .box input[type = "email"]:focus{
-    width: 280px;
-    border-color: #2ecc71;
+.input-field input[type=date]:focus + label,
+.input-field input[type=text]:focus + label,
+.input-field input[type=email]:focus + label,
+.input-field input[type=password]:focus + label {
+    color: #e91e65;
 }
 
-.box input[type = "submit"]{
-    border: 0;
-    background: none;
-    display: bloack;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid #2ecc71;
-    padding: 14px 40px;
-    outline: none;
-    color: white;
-    border-radius: 25px;
-    transition: 0.25s;
-    cursor: pointer;
+.input-field input[type=date]:focus,
+.input-field input[type=text]:focus,
+.input-field input[type=email]:focus,
+.input-field input[type=password]:focus {
+    border-bottom: 2px solid #e91e63;
+    box-shadow: none;
 }
 
-.box input[type = "submit"]:hover{
-    background: #2ecc71;
+.container, p {
+    animation: showUp 0.5s cubic-bezier(0.18, 1.3, 1, 1) forwards;
 }
 
+@keyframes showUp {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transoform: scale(1);
+    }
+}
+.row {margin-bottom: 10px;}
+
+.ngl {
+    position: absolute;
+    top: -20px;
+    right: -20px;
+}
